4.0
------------------------------------------------------------------------
- Major fix: Issues with tree and garden overrides that caused graphical glitching.
- Fixed object: Chinese Cedar Tree (fidwell.scenery_small.tcc)
- Fixed object: Cabana Roof Piece (fidwell.scenery_small.sbwplm05)
- Fixed: Ordering of objects in Antarctic theming

3.1
------------------------------------------------------------------------
- Fixed: Issues with bubbling tarpit / swamp goo overrides.

3.0
------------------------------------------------------------------------
- New script: Generate object JSON data from vanilla game or DAT object
- New script: Recolor any compatible PNG files with recolorable color 1
- New script: Zip all object files in the repo
- New script: Zip and install all parkobj files in the repo
- New object: Palm Tree (rct2.scenery_small.tpm)
- New object: Tree (rct2.scenery_small.tropt1)
- New object: Gardens (rct2.scenery_small.tg19)
- New object: Base Block (toontowner.scenery_small.xxbbbr01)
- New object: Roof (rct2.scenery_small.roof5)
- New object: Roof (rct2.scenery_small.roof7)
- New object: Sphinx (rct2.scenery_large.sspx)
- New object: Pyramid (rct2.scenery_large.spyr)
- New object: Plant (rct2.scenery_small.tjp1)
- New object: Tree (rct2.scenery_small.tjp2)
- New object: Flower (rct2.scenery_small.tjf)
- New object: Wooden Post Wall (couger.scenery_wall.acwwf32)
- New object: Wooden Post Wall (couger.scenery_wall.acww33)
- New object: Dinosaur (rct2.scenery_large.sdn1)
- New object: Dinosaur (rct2.scenery_large.sdn2)
- New object: Dinosaur (rct2.scenery_large.sdn3)
- New object: Martian Object (rct2.scenery_small.tmo1)
- New object: Roof (toontowner.scenery_small.ttrfwd01)
- New object: Roof (toontowner.scenery_small.ttrfwd02)
- New object: Roof (toontowner.scenery_small.ttrfwd03)
- New object: Roof (toontowner.scenery_small.ttrfwd04)
- New object: Roof (toontowner.scenery_small.ttrfwd06)
- New object: Roof (toontowner.scenery_small.ttrfwd07)