@@ -1,8 +1,7 @@
 {
     "id": "fidwell.scenery_large.scol",
     "authors": ["Chris Sawyer", "Simon Foster"],
-    "version": "1.0",
-    "originalId": "0C58B202|IRESCOLC|5D593FDF",
+    "version": "2.0",
     "sourceGame": "custom",
     "objectType": "scenery_large",
     "properties": {
