@@ -1,8 +1,7 @@
 {
     "id": "fidwell.scenery_large.svlc",
     "authors": ["Chris Sawyer", "Simon Foster"],
-    "version": "1.0",
-    "originalId": "0C58B202|ETHCLR41|7FF57BE0",
+    "version": "2.0",
     "sourceGame": "custom",
     "objectType": "scenery_large",
     "properties": {
