@@ -1,9 +1,11 @@
 4.0
 ------------------------------------------------------------------------
 - Major fix: Issues with tree and garden overrides that caused graphical glitching.
+- Fixed object: Roman Colosseum (fidwell.scenery_large.scol)
+- Fixed object: Volcano (fidwell.scenery_large.svlc)
 - Fixed object: Chinese Cedar Tree (fidwell.scenery_small.tcc)
 - Fixed object: Cabana Roof Piece (fidwell.scenery_small.sbwplm05)
-- Fixed: Ordering of objects in Antarctic theming
+- Fixed: Ordering of objects in Antarctic, North America theming
 
 3.1
 ------------------------------------------------------------------------
